Closed Bug 114973 Opened 23 years ago Closed 23 years ago

nsPluginInstanceOwner::GetParameters() shouldn't return an error on 0 parameters

Categories

(Core Graveyard :: Plug-ins, defect, P1)

defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9.7

People

(Reporter: beard, Assigned: peterl-bugs)

Details

Attachments

(1 file)

The MRJ Java plugin currently relies on the fact that if there aren't any
parameters, that NS_OK is returned. The plugin assumes that something has gone
terribly wrong if the GetParameters() returns an error. The fix is simple,
simply remove the code which returns an error if (!mNumCachedParams). Perhaps we
should return an error if the element is <EMBED>, but certainly not if it is
<OBJECT> or <APPLET>.
GetParameters() shouldn't have a side effect of checking for EMBED tags, that's
what GetTagType() is for. Fixed up patch on it's way....
Assignee: av → peterl
Priority: -- → P1
Target Milestone: --- → mozilla0.9.7
Comment on attachment 61553 [details] [diff] [review]
patch to return success for 0 parameters

r=av
Attachment #61553 - Flags: review+
Comment on attachment 61553 [details] [diff] [review]
patch to return success for 0 parameters

sr=beard
Attachment #61553 - Flags: superreview+
Blocks: 114455
Comment on attachment 61553 [details] [diff] [review]
patch to return success for 0 parameters

a=brendan@mozilla.org for checkin to 0.9.7.

/be
Attachment #61553 - Flags: approval+
Patch in trunk, marking FIXED.
Status: NEW → RESOLVED
Closed: 23 years ago
Keywords: reviewfixed0.9.7
Resolution: --- → FIXED
No longer blocks: 114455
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: