Fixing GetParameters() back to the way it was, returning success for zero parameters bug 114973 r=av sr=beard a=brendan